tests/snapshots/tests__cfxlua@compile_time_jenkins_hashes.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::CfxLua)"
input_file: tests/inputs-cfxlua/compile_time_jenkins_hashes.lua
snapshot_kind: text
---
print(`Hello, World!`)
