tests/snapshots/tests__cfxlua@double_greater_than_equal.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::CfxLua)"
input_file: tests/inputs-cfxlua/double_greater_than_equal.lua
snapshot_kind: text
---
local num = 4
num >>= 2
