tests/snapshots/tests__cfxlua@double_less_than_equal.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::CfxLua)"
input_file: tests/inputs-cfxlua/double_less_than_equal.lua
snapshot_kind: text
---
local num = 1
num <<= 2
