tests/snapshots/tests__cfxlua@set_constructor.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::CfxLua)"
input_file: tests/inputs-cfxlua/set_constructor.lua
snapshot_kind: text
---
t = { .a, b = false }
